err/bqapi.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/bqapi'...
Listing './lib/python3.5/site-packages/bqapi/RequestsMonkeyPatch'...
Compiling './lib/python3.5/site-packages/bqapi/bqnode.py'...
***   File "./lib/python3.5/site-packages/bqapi/bqnode.py", line 93
    print "SETTER"
                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/bqapi/casauth.py'...
***   File "./lib/python3.5/site-packages/bqapi/casauth.py", line 27
    print signin_page.headers
                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/bqapi/comm.py'...
***   File "./lib/python3.5/site-packages/bqapi/comm.py", line 551
    except etree.ParseError, e:
                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/bqapi/util.py'...
***   File "./lib/python3.5/site-packages/bqapi/util.py", line 103
    except (OSError, AttributeError), e:
                                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/bqapi/xmldict.py'...
***   File "./lib/python3.5/site-packages/bqapi/xmldict.py", line 104
    print X
          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/bqapi-0.5.9.egg-info'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/requests_toolbelt'...
Listing './lib/python3.5/site-packages/requests_toolbelt/adapters'...
Listing './lib/python3.5/site-packages/requests_toolbelt/auth'...
Listing './lib/python3.5/site-packages/requests_toolbelt/cookies'...
Listing './lib/python3.5/site-packages/requests_toolbelt/downloadutils'...
Listing './lib/python3.5/site-packages/requests_toolbelt/multipart'...
Listing './lib/python3.5/site-packages/requests_toolbelt/threaded'...
Listing './lib/python3.5/site-packages/requests_toolbelt/utils'...
Listing './lib/python3.5/site-packages/requests_toolbelt-0.8.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tests'...
Compiling './lib/python3.5/site-packages/tests/conftest.py'...
***   File "./lib/python3.5/site-packages/tests/conftest.py", line 27
    print "Fetching", name
                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/tests/test_bqapi.py'...
***   File "./lib/python3.5/site-packages/tests/test_bqapi.py", line 22
    print "loading /data_service/images->", BQFactory.to_string((x))
                                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/tests/test_bqclass.py'...
***   File "./lib/python3.5/site-packages/tests/test_bqclass.py", line 22
    print "ORIGINAL"
                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/tests/test_util.py'...
***   File "./lib/python3.5/site-packages/tests/test_util.py", line 142
    except BQCommError, e:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
